--- a/static/styles.css
+++ b/static/styles.css
@@ -249,6 +249,10 @@ input[type="range"] {
   width: 100%;
 }
 
+.range--rtl {
+  direction: rtl;
+}
+
 input[type="text"] {
   width: 100%;
   border-radius: 12px;
