feat: add warning heuristics, print sheets, and resilient batch UX

--- a/src/ai_headshot_studio/static/styles.css
+++ b/src/ai_headshot_studio/static/styles.css
@@ -403,6 +403,12 @@ input[type="range"] {
   color: rgba(170, 179, 210, 0.9);
 }
 
+.preview__warning {
+  min-height: 1.1em;
+  font-size: 0.78rem;
+  color: #ffd196;
+}
+
 .preview img {
   width: 100%;
   height: auto;
